added quartz job scheduling for order cleanup; added log rotation in setup.sh

--- a/packages/cit-quickstart/src/main/application/features/servlet3/WEB-INF/web.xml
+++ b/packages/cit-quickstart/src/main/application/features/servlet3/WEB-INF/web.xml
@@ -26,6 +26,9 @@
     <listener>
         <listener-class>com.intel.mtwilson.deployment.threads.OrderProgressMonitor</listener-class>
     </listener>
+    <listener>
+        <listener-class>com.intel.mtwilson.deployment.threads.QuartzManager</listener-class>
+    </listener>
     
     <listener>
         <listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
