added withComponents option to pom to build package with components; instead of using separate pom.xml

--- a/build.targets
+++ b/build.targets
@@ -1,3 +1,3 @@
 # A successful build produces the following files:
 packages/cit-quickstart-linux/target/cit-quickstart-linux-3.0-SNAPSHOT.bin
-packages/cit-quickstart-linux/target/cit-quickstart-linux-with-components-3.0-SNAPSHOT.bin
+packages/cit-quickstart-linux/target/cit-quickstart-linux-3.0-SNAPSHOT-with-components.bin
