--- a/packages/cit-quickstart/pom.xml
+++ b/packages/cit-quickstart/pom.xml
@@ -3,7 +3,6 @@
     
     <groupId>com.intel.mtwilson.quickstart.packages.zip</groupId>
     <artifactId>cit-quickstart</artifactId>
-    <version>3.0-SNAPSHOT</version>
     
     <packaging>jar</packaging>
     <description>Automation project</description>
@@ -11,7 +10,7 @@
     <parent>
         <groupId>com.intel.mtwilson.maven</groupId>
         <artifactId>mtwilson-core-application-zip</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.1-SNAPSHOT</version>
         <relativePath/>
     </parent>
     
@@ -41,50 +40,53 @@
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-help</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-version</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-html5</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-html5-login-anon</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
+            <classifier>feature</classifier>
+            <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>com.intel.mtwilson.services</groupId>
+            <artifactId>mtwilson-configuration-settings-ws-v2</artifactId>
+            <version>${project.version}</version>
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-jetty9</artifactId>
-            <version>0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-feature-inventory</artifactId>
-            <version>0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-setup</artifactId>
-            <version>3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-login-token</artifactId>
-            <version>0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.integration</groupId>
@@ -97,13 +99,6 @@
         <dependency>
             <groupId>com.intel.mtwilson.integration</groupId>
             <artifactId>mtwilson-password-vault</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.intel.mtwilson.services</groupId>
-            <artifactId>mtwilson-configuration-settings-ws-v2</artifactId>
-            <version>${mtwilson.version}</version>
-            <classifier>feature</classifier>
-            <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.services</groupId>
@@ -126,7 +121,6 @@
         <dependency>
             <groupId>com.intel.mtwilson.services</groupId>
             <artifactId>mtwilson-shiro-ws-v2</artifactId>
-            <version>${mtwilson.version}</version>
         </dependency>
         -->
         <!--
@@ -138,13 +132,12 @@
         <dependency>
             <groupId>com.intel.mtwilson.util</groupId>
             <artifactId>mtwilson-util-jersey2</artifactId>
-            <version>0.1-SNAPSHOT</version>
         </dependency>
         <!--
         <dependency>
             <groupId>com.intel.mtwilson</groupId>
             <artifactId>mtwilson-core-user-profile</artifactId>
-            <version>3.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
@@ -154,14 +147,14 @@
         <dependency>
             <groupId>com.intel.mtwilson</groupId>
             <artifactId>cit-quickstart-wizard</artifactId>
-            <version>3.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson</groupId>
             <artifactId>cit-task</artifactId>
-            <version>3.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
