--- a/packages/cit-quickstart-linux/pom.xml
+++ b/packages/cit-quickstart-linux/pom.xml
@@ -18,7 +18,8 @@
     <properties>
         <!-- this becomes the installer filename, like ${makeself.name}.bin -->
         <makeself.name>${project.artifactId}-${project.version}</makeself.name>
-        <with.components>with-components</with.components>
+        <integrity>integrity</integrity>
+        <confidentiality>confidentiality</confidentiality>
     </properties>
   
     <dependencies>
@@ -46,12 +47,13 @@
     
     <profiles>
         <profile>
-            <activation>
+            <id>integrity</id>
+			<activation>
                 <os>
                     <family>unix</family>
                 </os>
                 <property>
-                    <name>withComponents</name>  <!-- activate this profile with  -DwithComponents on the command line -->
+                    <name>integrityBuild</name>  <!-- activate this profile with  -Dintegrity on the command line -->
                 </property>
             </activation>
             <build>
@@ -67,7 +69,7 @@
                                     <goal>copy-dependencies</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${project.build.directory}/${makeself.name}-${with.components}</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/${makeself.name}-${integrity}</outputDirectory>
                                     <excludeTransitive>true</excludeTransitive>
                                 </configuration>
                             </execution>
@@ -86,7 +88,7 @@
                                     <goal>copy-resources</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${project.build.directory}/${makeself.name}-${with.components}</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/${makeself.name}-${integrity}</outputDirectory>
                                     <resources>
                                         <resource>
                                             <directory>src/main/resources</directory>
@@ -97,7 +99,7 @@
                             </execution>
                         </executions>
                     </plugin>
-
+                    
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
@@ -113,11 +115,11 @@
                                         <!-- temporary directory for creating packages -->
                                         <mkdir dir="/tmp/makeself"/>
                                         <chmod perm="700" dir="/tmp/makeself"/>
-                                
+                                        
                                         <!-- package directory contains everything that should be included in the installer -->
-                                        <mkdir dir="${project.build.directory}/${makeself.name}-${with.components}"/>
+                                        <mkdir dir="${project.build.directory}/${makeself.name}-${integrity}"/>
                                         <chmod perm="700">
-                                            <fileset dir="${project.build.directory}/${makeself.name}-${with.components}">
+                                            <fileset dir="${project.build.directory}/${makeself.name}-${integrity}">
                                                 <include name="**/*.sh"/>
                                                 <include name="**/*.bin"/>
                                                 <include name="**/*.pl"/>
@@ -129,14 +131,13 @@
                                             <arg value="--follow"/>
                                             <arg value="--nocomp"/>
                                             <!-- <arg value=" - - n o t e m p "/>  makeself needs an option to clean up the non-/tmp dir so disabling until we have that -->
-                                            <arg value="${project.build.directory}/${makeself.name}-${with.components}"/>
-                                            <arg value="${project.build.directory}/${makeself.name}-${with.components}.bin"/>
-                                            <arg value="${makeself.name}-${with.components}"/>
+                                            <arg value="${project.build.directory}/${makeself.name}-${integrity}"/>
+                                            <arg value="${project.build.directory}/${makeself.name}-${integrity}.bin"/>
+                                            <arg value="${makeself.name}-${integrity}"/>
                                             <arg value="bash"/>
                                             <arg value="setup.sh"/>
                                         </exec>
-
-                                    
+                                        
                                         <fail message="Cannot build self-extracting installer" status="${mavenExitMakeself}">
                                             <condition>
                                                 <not>
@@ -160,7 +161,8 @@
                                 <version>1.0b3</version>
                             </dependency>
                         </dependencies>
-                    </plugin>	    
+                    </plugin>
+                    
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>build-helper-maven-plugin</artifactId>
@@ -174,9 +176,9 @@
                                 <configuration>
                                     <artifacts>
                                         <artifact>
-                                            <file>${project.build.directory}/${makeself.name}-${with.components}.bin</file>
+                                            <file>${project.build.directory}/${makeself.name}-${integrity}.bin</file>
                                             <type>bin</type>
-                                            <classifier>${with.components}</classifier>
+                                            <classifier>${integrity}</classifier>
                                         </artifact>
                                     </artifacts>
                                 </configuration>
@@ -186,6 +188,185 @@
                 </plugins>
             </build>
             <dependencies>
+                <!-- component installers -->
+                <dependency>
+                    <groupId>com.intel.mtwilson.director</groupId>
+                    <artifactId>director</artifactId>
+                    <version>0.1-SNAPSHOT</version>
+                    <type>bin</type>
+                </dependency>
+
+                <dependency>
+                    <groupId>com.intel.mtwilson.linux</groupId>
+                    <artifactId>mtwilson-server</artifactId>
+                    <version>3.0-SNAPSHOT</version>
+                    <classifier>jdk_glassfish_monit</classifier>
+                    <type>bin</type>
+                </dependency>
+
+                <dependency>
+                    <groupId>com.intel.mtwilson.openstack.packages</groupId>
+                    <artifactId>mtwilson-openstack-controller</artifactId>
+                    <version>0.1-SNAPSHOT</version>
+                    <type>bin</type>
+                </dependency>
+
+                <dependency>
+                    <groupId>com.intel.mtwilson.openstack.packages</groupId>
+                    <artifactId>mtwilson-openstack-trusted-node-ubuntu</artifactId>
+                    <version>0.1-SNAPSHOT</version>
+                    <type>bin</type>
+                </dependency>
+				<dependency>
+					<groupId>com.intel.mtwilson.openstack.packages</groupId>
+					<artifactId>mtwilson-openstack-trusted-node-rhel</artifactId>
+					<version>0.1-SNAPSHOT</version>
+					<type>bin</type>
+				</dependency>
+            </dependencies>
+        </profile>
+		<profile>
+			<id>confidentiality</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                </os>
+                <property>
+                    <name>confidentialityBuild</name>  <!-- activate this profile with  -Dconfidentiality on the command line -->
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <!-- copy all dependencies (non-transitive) to the resources folder for later packaging -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/${makeself.name}-${confidentiality}</outputDirectory>
+                                    <excludeTransitive>true</excludeTransitive>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    
+                    <!-- copy the setup script and any other locally defined resources for packaging -->
+                    <plugin>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <version>2.7</version>
+                        <executions>
+                            <execution>
+                                <id>copy-application-directories</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/${makeself.name}-${confidentiality}</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>src/main/resources</directory>
+                                            <filtering>false</filtering>
+                                        </resource>
+                                    </resources>
+                                </configuration>            
+                            </execution>
+                        </executions>
+                    </plugin>
+                    
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>default-cli</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <!-- temporary directory for creating packages -->
+                                        <mkdir dir="/tmp/makeself"/>
+                                        <chmod perm="700" dir="/tmp/makeself"/>
+                                        
+                                        <!-- package directory contains everything that should be included in the installer -->
+                                        <mkdir dir="${project.build.directory}/${makeself.name}-${confidentiality}"/>
+                                        <chmod perm="700">
+                                            <fileset dir="${project.build.directory}/${makeself.name}-${confidentiality}">
+                                                <include name="**/*.sh"/>
+                                                <include name="**/*.bin"/>
+                                                <include name="**/*.pl"/>
+                                            </fileset>
+                                        </chmod>
+                                        <exec executable="makeself" dir="${project.build.directory}" resultproperty="mavenExitMakeself">
+                                            <!-- providing the environment variable TMPDIR tells makeself where to put temporary files when extracting at install time; we keep them in user's home directory to prevent world reading and possibly writing in /tmp; problem is ~ is interpreted literally here and if we use ${user.home} it will be interpolated now and won't work during install -->
+                                            <!-- <env key="TMPDIR" value="${user.home}/.tmp"/> -->
+                                            <arg value="--follow"/>
+                                            <arg value="--nocomp"/>
+                                            <!-- <arg value=" - - n o t e m p "/>  makeself needs an option to clean up the non-/tmp dir so disabling until we have that -->
+                                            <arg value="${project.build.directory}/${makeself.name}-${confidentiality}"/>
+                                            <arg value="${project.build.directory}/${makeself.name}-${confidentiality}.bin"/>
+                                            <arg value="${makeself.name}-${confidentiality}"/>
+                                            <arg value="bash"/>
+                                            <arg value="setup.sh"/>
+                                        </exec>
+                                        
+                                        <fail message="Cannot build self-extracting installer" status="${mavenExitMakeself}">
+                                            <condition>
+                                                <not>
+                                                    <equals arg1="${mavenExitMakeself}" arg2="0"/>
+                                                </not>
+                                            </condition>
+                                        </fail>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.ant</groupId>
+                                <artifactId>ant</artifactId>
+                                <version>1.8.4</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>ant-contrib</groupId>
+                                <artifactId>ant-contrib</artifactId>
+                                <version>1.0b3</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                    
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>build-helper-maven-plugin</artifactId>
+                        <executions>                      
+                            <execution>
+                                <id>attach-artifacts</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>attach-artifact</goal>
+                                </goals>
+                                <configuration>
+                                    <artifacts>
+                                        <artifact>
+                                            <file>${project.build.directory}/${makeself.name}-${confidentiality}.bin</file>
+                                            <type>bin</type>
+                                            <classifier>${confidentiality}</classifier>
+                                        </artifact>
+                                    </artifacts>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+			<dependencies>
                 <!-- component installers -->
                 <dependency>
                     <groupId>com.intel.mtwilson.director</groupId>
