--- a/features/cit-quickstart-wizard/pom.xml
+++ b/features/cit-quickstart-wizard/pom.xml
@@ -1,31 +1,49 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    
     <groupId>com.intel.mtwilson</groupId>
     <artifactId>cit-quickstart-wizard</artifactId>
-    <version>3.0-SNAPSHOT</version>
+    
     <packaging>jar</packaging>
-  
+    
     <parent>
         <groupId>com.intel.mtwilson.maven</groupId>
         <artifactId>mtwilson-core-feature-zip</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.1-SNAPSHOT</version>
         <relativePath/>
     </parent>
-
-    <dependencies>  
-        
+    
+    <dependencies>
+        <!-- common-java -->
         <dependency>
-            <groupId>com.intel.mtwilson</groupId>
-            <artifactId>cit-task</artifactId>
-            <version>${project.version}</version>
+            <!-- Purpose: enables storing test environment info outside test sources -->
+            <groupId>com.intel.mtwilson.core</groupId>
+            <artifactId>mtwilson-core-junit</artifactId>
+            <scope>test</scope>
         </dependency>
-
+        <!-- this is mtwilson-core-configuration -->
+        <dependency>
+            <groupId>com.intel.mtwilson.integration</groupId>
+            <artifactId>mtwilson-configuration</artifactId>
+        </dependency>
+        <!-- this is mtwilson-core-launcher-api -->
+        <dependency>
+            <groupId>com.intel.mtwilson.integration</groupId>
+            <artifactId>mtwilson-launcher-api</artifactId>
+        </dependency>
+        <!-- this is mtwilson-core-password-vault -->
+        <dependency>
+            <groupId>com.intel.mtwilson.integration</groupId>
+            <artifactId>mtwilson-password-vault</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.intel.mtwilson.integration</groupId>
+            <artifactId>mtwilson-feature-xml</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.util</groupId>
             <artifactId>mtwilson-util-crypto-password</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.intel.mtwilson.util</groupId>
             <artifactId>mtwilson-util-exec</artifactId>
@@ -59,29 +77,14 @@
             <artifactId>mtwilson-util-ssh</artifactId>
         </dependency>
         
-        <!-- this is mtwilson-core-configuration -->
+        <!-- quickstart -->
         <dependency>
-            <groupId>com.intel.mtwilson.integration</groupId>
-            <artifactId>mtwilson-configuration</artifactId>
-        </dependency>
-        <!-- this is mtwilson-core-launcher-api -->
-        <dependency>
-            <groupId>com.intel.mtwilson.integration</groupId>
-            <artifactId>mtwilson-launcher-api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <!-- this is mtwilson-core-password-vault -->
-        <dependency>
-            <groupId>com.intel.mtwilson.integration</groupId>
-            <artifactId>mtwilson-password-vault</artifactId>
-        </dependency>
-        
-        <dependency>
-            <groupId>com.intel.mtwilson.integration</groupId>
-            <artifactId>mtwilson-feature-xml</artifactId>
+            <groupId>com.intel.mtwilson</groupId>
+            <artifactId>cit-task</artifactId>
             <version>${project.version}</version>
         </dependency>
         
+        <!-- external -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
@@ -92,7 +95,6 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <optional>true</optional>
         </dependency>
-    
         <dependency>
             <!-- Purpose: scheduling tasks to run in background -->
             <!-- URL: https://quartz-scheduler.org -->
@@ -101,7 +103,6 @@
             <artifactId>quartz</artifactId>
             <version>2.2.2</version>
         </dependency>
-
         <dependency>
             <!-- Purpose: processing template documents to generate .env files -->
             <!-- URL: http://www.stringtemplate.org -->
@@ -110,7 +111,6 @@
             <artifactId>stringtemplate</artifactId>
             <version>4.0.2</version>
         </dependency>
-        
         <dependency>
             <!-- Purpose: processing JSON-LD documents -->
             <!-- URL: https://github.com/jsonld-java/jsonld-java -->
@@ -118,9 +118,7 @@
             <groupId>com.github.jsonld-java</groupId>
             <artifactId>jsonld-java</artifactId>
             <version>0.7.0</version>
-        </dependency>        
-        
-                        
+        </dependency>
         <dependency>
             <!-- Purpose: connecting to hosts via ssh and sftp -->
             <!-- URL: https://github.com/hierynomus/sshj -->
@@ -129,13 +127,11 @@
             <artifactId>sshj</artifactId>
             <version>0.8.1</version>
         </dependency>
-
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.servlet</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <!-- Purpose: to support zip file uploads to key broker (provides org.glassfish.jersey.media.multipart.FormDataMultiPart class) -->
             <!-- URL: https://jersey.java.net/ -->
@@ -143,15 +139,12 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-multipart</artifactId>
         </dependency>
-
-        
         <!-- required for javax.ws.rs.QueryParam in RpcFilterCriteria and javax.ws.rs.Path in Rpcs resource -->
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
             <scope>provided</scope>
         </dependency>
-        
         <dependency>
             <!-- Purpose: logging API -->
             <!-- URL: http://www.slf4j.org -->
@@ -159,7 +152,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
-        
         <dependency>
             <!-- Purpose: logging implementation -->
             <!-- URL: http://logback.qos.ch -->
@@ -168,23 +160,11 @@
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
-
-                
-        <dependency>
-            <!-- Purpose: enables storing test environment info outside test sources -->
-            <groupId>com.intel.mtwilson.core</groupId>
-            <artifactId>mtwilson-core-junit</artifactId>
-            <version>0.1-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-		
-    </dependencies>  
-
-
+    </dependencies>
+    
 </project>
