dev-cit-3.0-maven-version-change: Updated version

--- a/features/cit-quickstart-wizard/pom.xml
+++ b/features/cit-quickstart-wizard/pom.xml
@@ -3,7 +3,8 @@
     
     <groupId>com.intel.mtwilson</groupId>
     <artifactId>cit-quickstart-wizard</artifactId>
-    
+    <version>3.0.1-SNAPSHOT</version>
+
     <packaging>jar</packaging>
     
     <parent>
