--- a/features/cit-task/pom.xml
+++ b/features/cit-task/pom.xml
@@ -3,7 +3,8 @@
     
     <groupId>com.intel.mtwilson</groupId>
     <artifactId>cit-task</artifactId>
-    
+    <version>3.0.1-SNAPSHOT</version>
+
     <packaging>jar</packaging>
     
     <parent>
