--- a/features/cit-quickstart-wizard/pom.xml
+++ b/features/cit-quickstart-wizard/pom.xml
@@ -20,6 +20,7 @@
             <!-- Purpose: enables storing test environment info outside test sources -->
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-junit</artifactId>
+            <version>0.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <!-- this is mtwilson-core-configuration -->
@@ -31,6 +32,7 @@
         <dependency>
             <groupId>com.intel.mtwilson.integration</groupId>
             <artifactId>mtwilson-launcher-api</artifactId>
+            <version>3.0-SNAPSHOT</version>
         </dependency>
         <!-- this is mtwilson-core-password-vault -->
         <dependency>
@@ -40,6 +42,7 @@
         <dependency>
             <groupId>com.intel.mtwilson.integration</groupId>
             <artifactId>mtwilson-feature-xml</artifactId>
+            <version>3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.util</groupId>
