--- a/packages/cit-quickstart/pom.xml
+++ b/packages/cit-quickstart/pom.xml
@@ -80,6 +80,7 @@
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-feature-inventory</artifactId>
+            <version>0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
