--- a/packages/cit-quickstart-linux/pom.xml
+++ b/packages/cit-quickstart-linux/pom.xml
@@ -27,7 +27,8 @@
         <dependency>
             <groupId>com.intel.mtwilson.linux</groupId>
             <artifactId>mtwilson-linux-util</artifactId>
-            <version>${project.version}</version>
+            <version>3.0-SNAPSHOT</version>
+            <!--<version>${project.version}</version>-->
             <type>sh</type>
         </dependency>
         
