--- a/packages/cit-quickstart/pom.xml
+++ b/packages/cit-quickstart/pom.xml
@@ -41,35 +41,40 @@
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-help</artifactId>
-            <version>${project.version}</version>
+            <version>0.1-SNAPSHOT</version>
+            <!--<version>${project.version}</version>-->
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-version</artifactId>
-            <version>${project.version}</version>
+            <version>0.1-SNAPSHOT</version>
+            <!--<version>${project.version}</version>-->
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-html5</artifactId>
-            <version>${project.version}</version>
+            <version>0.1-SNAPSHOT</version>
+            <!--<version>${project.version}</version>-->
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-html5-login-anon</artifactId>
-            <version>${project.version}</version>
+            <version>0.1-SNAPSHOT</version>
+            <!--<version>${project.version}</version>-->
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.services</groupId>
             <artifactId>mtwilson-configuration-settings-ws-v2</artifactId>
-            <version>${project.version}</version>
+            <version>3.0-SNAPSHOT</version>
+            <!--<version>${project.version}</version>-->
             <classifier>feature</classifier>
             <type>zip</type>
         </dependency>
@@ -85,7 +90,8 @@
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
             <artifactId>mtwilson-core-setup</artifactId>
-            <version>${project.version}</version>
+            <version>3.0-SNAPSHOT</version>
+            <!--<version>${project.version}</version>-->
         </dependency>
         <dependency>
             <groupId>com.intel.mtwilson.core</groupId>
@@ -135,7 +141,8 @@
         <dependency>
             <groupId>com.intel.mtwilson.util</groupId>
             <artifactId>mtwilson-util-jersey2</artifactId>
-            <version>${project.version}</version>
+            <version>0.1-SNAPSHOT</version>
+            <!--<version>${project.version}</version>-->
         </dependency>
         <!--
         <dependency>
