--- a/build.targets
+++ b/build.targets
@@ -1,4 +1,4 @@
 # A successful build produces the following files:
-packages/cit-quickstart-linux/target/cit-quickstart-linux-3.0.1-SNAPSHOT.bin
-packages/cit-quickstart-linux/target/cit-quickstart-linux-3.0.1-SNAPSHOT-confidentiality.bin
-packages/cit-quickstart-linux/target/cit-quickstart-linux-3.0.1-SNAPSHOT-integrity.bin
+packages/cit-quickstart-linux/target/cit-quickstart-linux-3.0-SNAPSHOT.bin
+packages/cit-quickstart-linux/target/cit-quickstart-linux-3.0-SNAPSHOT-confidentiality.bin
+packages/cit-quickstart-linux/target/cit-quickstart-linux-3.0-SNAPSHOT-integrity.bin
