--- a/packages/cit-quickstart-linux/pom.xml
+++ b/packages/cit-quickstart-linux/pom.xml
@@ -18,8 +18,8 @@
     <properties>
         <!-- this becomes the installer filename, like ${makeself.name}.bin -->
         <makeself.name>${project.artifactId}-${project.version}</makeself.name>
-        <integrity>integrity</integrity>
-        <confidentiality>confidentiality</confidentiality>
+        <integrity.name>integrity</integrity.name>
+        <confidentiality.name>confidentiality</confidentiality.name>
     </properties>
     
     <dependencies>
@@ -53,8 +53,8 @@
     
     <profiles>
         <profile>
-			<id>integrityBuild</id>
-			<activation>
+            <id>integrityBuild</id>
+            <activation>
                 <os>
                     <family>unix</family>
                 </os>
@@ -75,7 +75,7 @@
                                     <goal>copy-dependencies</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${project.build.directory}/${makeself.name}-${integrity}</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/${makeself.name}-${integrity.name}</outputDirectory>
                                     <excludeTransitive>true</excludeTransitive>
                                 </configuration>
                             </execution>
@@ -94,7 +94,7 @@
                                     <goal>copy-resources</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${project.build.directory}/${makeself.name}-${integrity}</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/${makeself.name}-${integrity.name}</outputDirectory>
                                     <resources>
                                         <resource>
                                             <directory>src/main/resources</directory>
@@ -123,9 +123,9 @@
                                         <chmod perm="700" dir="/tmp/makeself"/>
                                         
                                         <!-- package directory contains everything that should be included in the installer -->
-                                        <mkdir dir="${project.build.directory}/${makeself.name}-${integrity}"/>
+                                        <mkdir dir="${project.build.directory}/${makeself.name}-${integrity.name}"/>
                                         <chmod perm="700">
-                                            <fileset dir="${project.build.directory}/${makeself.name}-${integrity}">
+                                            <fileset dir="${project.build.directory}/${makeself.name}-${integrity.name}">
                                                 <include name="**/*.sh"/>
                                                 <include name="**/*.bin"/>
                                                 <include name="**/*.pl"/>
@@ -137,9 +137,9 @@
                                             <arg value="--follow"/>
                                             <arg value="--nocomp"/>
                                             <!-- <arg value=" - - n o t e m p "/>  makeself needs an option to clean up the non-/tmp dir so disabling until we have that -->
-                                            <arg value="${project.build.directory}/${makeself.name}-${integrity}"/>
-                                            <arg value="${project.build.directory}/${makeself.name}-${integrity}.bin"/>
-                                            <arg value="${makeself.name}-${integrity}"/>
+                                            <arg value="${project.build.directory}/${makeself.name}-${integrity.name}"/>
+                                            <arg value="${project.build.directory}/${makeself.name}-${integrity.name}.bin"/>
+                                            <arg value="${makeself.name}-${integrity.name}"/>
                                             <arg value="bash"/>
                                             <arg value="setup.sh"/>
                                         </exec>
@@ -182,9 +182,9 @@
                                 <configuration>
                                     <artifacts>
                                         <artifact>
-                                            <file>${project.build.directory}/${makeself.name}-${integrity}.bin</file>
+                                            <file>${project.build.directory}/${makeself.name}-${integrity.name}.bin</file>
                                             <type>bin</type>
-                                            <classifier>${integrity}</classifier>
+                                            <classifier>${integrity.name}</classifier>
                                         </artifact>
                                     </artifacts>
                                 </configuration>
@@ -199,7 +199,8 @@
                 <dependency>
                     <groupId>com.intel.mtwilson.director</groupId>
                     <artifactId>director</artifactId>
-                    <version>${project.version}</version>
+                    <version>0.1-SNAPSHOT</version>
+                    <!--<version>${project.version}</version>-->
                     <type>bin</type>
                 </dependency>
                 <dependency>
@@ -221,17 +222,17 @@
                     <version>${project.version}</version>
                     <type>bin</type>
                 </dependency>
-				<dependency>
-					<groupId>com.intel.mtwilson.openstack.packages</groupId>
-					<artifactId>mtwilson-openstack-trusted-node-rhel</artifactId>
-					<version>${project.version}</version>
-					<type>bin</type>
-				</dependency>
+                <dependency>
+                    <groupId>com.intel.mtwilson.openstack.packages</groupId>
+                    <artifactId>mtwilson-openstack-trusted-node-rhel</artifactId>
+                    <version>${project.version}</version>
+                    <type>bin</type>
+                </dependency>
             </dependencies>
         </profile>
 		
-		<profile>
-			<id>confidentialityBuild</id>
+        <profile>
+            <id>confidentialityBuild</id>
             <activation>
                 <os>
                     <family>unix</family>
@@ -253,7 +254,7 @@
                                     <goal>copy-dependencies</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${project.build.directory}/${makeself.name}-${confidentiality}</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/${makeself.name}-${confidentiality.name}</outputDirectory>
                                     <excludeTransitive>true</excludeTransitive>
                                 </configuration>
                             </execution>
@@ -272,7 +273,7 @@
                                     <goal>copy-resources</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${project.build.directory}/${makeself.name}-${confidentiality}</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/${makeself.name}-${confidentiality.name}</outputDirectory>
                                     <resources>
                                         <resource>
                                             <directory>src/main/resources</directory>
@@ -301,9 +302,9 @@
                                         <chmod perm="700" dir="/tmp/makeself"/>
                                         
                                         <!-- package directory contains everything that should be included in the installer -->
-                                        <mkdir dir="${project.build.directory}/${makeself.name}-${confidentiality}"/>
+                                        <mkdir dir="${project.build.directory}/${makeself.name}-${confidentiality.name}"/>
                                         <chmod perm="700">
-                                            <fileset dir="${project.build.directory}/${makeself.name}-${confidentiality}">
+                                            <fileset dir="${project.build.directory}/${makeself.name}-${confidentiality.name}">
                                                 <include name="**/*.sh"/>
                                                 <include name="**/*.bin"/>
                                                 <include name="**/*.pl"/>
@@ -315,9 +316,9 @@
                                             <arg value="--follow"/>
                                             <arg value="--nocomp"/>
                                             <!-- <arg value=" - - n o t e m p "/>  makeself needs an option to clean up the non-/tmp dir so disabling until we have that -->
-                                            <arg value="${project.build.directory}/${makeself.name}-${confidentiality}"/>
-                                            <arg value="${project.build.directory}/${makeself.name}-${confidentiality}.bin"/>
-                                            <arg value="${makeself.name}-${confidentiality}"/>
+                                            <arg value="${project.build.directory}/${makeself.name}-${confidentiality.name}"/>
+                                            <arg value="${project.build.directory}/${makeself.name}-${confidentiality.name}.bin"/>
+                                            <arg value="${makeself.name}-${confidentiality.name}"/>
                                             <arg value="bash"/>
                                             <arg value="setup.sh"/>
                                         </exec>
@@ -360,9 +361,9 @@
                                 <configuration>
                                     <artifacts>
                                         <artifact>
-                                            <file>${project.build.directory}/${makeself.name}-${confidentiality}.bin</file>
+                                            <file>${project.build.directory}/${makeself.name}-${confidentiality.name}.bin</file>
                                             <type>bin</type>
-                                            <classifier>${confidentiality}</classifier>
+                                            <classifier>${confidentiality.name}</classifier>
                                         </artifact>
                                     </artifacts>
                                 </configuration>
@@ -377,19 +378,22 @@
                 <dependency>
                     <groupId>com.intel.mtwilson.director</groupId>
                     <artifactId>director</artifactId>
-                    <version>${project.version}</version>
+                    <version>0.1-SNAPSHOT</version>
+                    <!--<version>${project.version}</version>-->
                     <type>bin</type>
                 </dependency>
                 <dependency>
                     <groupId>com.intel.mtwilson.kms</groupId>
                     <artifactId>kms</artifactId>
-                    <version>${project.version}</version>
+                    <version>0.1-SNAPSHOT</version>
+                    <!--<version>${project.version}</version>-->
                     <type>bin</type>
                 </dependency>
                 <dependency>
                     <groupId>com.intel.mtwilson.kms</groupId>
                     <artifactId>kmsproxy</artifactId>
-                    <version>${project.version}</version>
+                    <version>0.1-SNAPSHOT</version>
+                    <!--<version>${project.version}</version>-->
                     <type>bin</type>
                 </dependency>
                 <dependency>
@@ -411,12 +415,12 @@
                     <version>${project.version}</version>
                     <type>bin</type>
                 </dependency>
-				<dependency>
-					<groupId>com.intel.mtwilson.openstack.packages</groupId>
-					<artifactId>mtwilson-openstack-trusted-node-rhel</artifactId>
-					<version>${project.version}</version>
-					<type>bin</type>
-				</dependency>
+                <dependency>
+                    <groupId>com.intel.mtwilson.openstack.packages</groupId>
+                    <artifactId>mtwilson-openstack-trusted-node-rhel</artifactId>
+                    <version>${project.version}</version>
+                    <type>bin</type>
+                </dependency>
             </dependencies>
         </profile>
     </profiles>
